# automem

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md
adapters/: README.zh-CN.md
automem_client/: __init__.py  http.py  operations.py  payloads.py  recall.py
backend/: .env.example  __init__.py  agent_keys.py  audit_log.py  auth.py  benchmark_recall.py  governance_jobs.py  long_term.py  main.py  memory_cache.py  metrics.py  routing.py  schemas.py  search.py  search_pipeline.py  services.py  storage.py  task_storage.py  tasks.py
cli/: memory
docs/: ARCHITECTURE.md  INSTALLATION.md  INTEGRATIONS.md  NAMING.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
scripts/: backup_data.sh  governance_worker.py  install_adapter.py  scheduled_consolidate.py
tests/: conftest.py  test_adapter_regressions.py  test_backend_baseline.py  test_benchmark_recall.py  test_cli_memory.py  test_deep_user_memory_flows.py  test_deep_user_task_flows.py  test_governance_worker.py  test_harness_foundation_live.py  test_identity_e2e.py  test_identity_unit.py  test_install_adapter.py  test_lane_selection.py  test_repository_layout.py  test_runtime_driver_support.py  test_runtime_drivers.py  test_runtime_entrypoints_live.py  test_scheduled_consolidate.py  test_scope_model_unit.py  test_support_fake_memory.py  test_task_governance_targets.py
(+138 files in other folders)
